# analiseDadosApartments

./: .gitignore  README.md  pyproject.toml  requirements.txt
analiseDadosApartments.egg-info/: PKG-INFO  SOURCES.txt
src/: pipeline.py
src/meu_pipeline_dados.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_pipeline.py
